<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/feed_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/feed_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/statusBarColor"
            android:fitsSystemWindows="true"
            app:navigationIcon="@drawable/ic_action_back">

            <TextView
                android:id="@+id/feed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="问题反馈"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.example.yxm.photogenic.font.FontTextView
        android:id="@+id/project_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:padding="10dp"
        android:text="@string/introduce"
        android:textSize="16sp"
        app:fontType="@string/condensed_medium_font" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/csdn"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/jianshu"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>