<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/edit_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@color/lightGray"
        android:drawableStart="@drawable/ic_action_search_no_padding"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/query_hint"
        android:textColor="@color/darkGray"
        android:textSize="14sp"
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/query_cancel_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/darkGray"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_query"
        app:layout_constraintLeft_toRightOf="@+id/edit_query"
        app:layout_constraintRight_toRightOf="parent" />

    <com.example.yxm.photogenic.font.FontTextView
        android:id="@+id/hot_words_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:text="@string/key_word"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:fontType="@string/condensed_bold_font"
        app:layout_constraintTop_toBottomOf="@+id/edit_query"
        app:layout_constraintVertical_weight="1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hot_words_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        app:layout_constraintTop_toBottomOf="@+id/hot_words_title" />

</android.support.constraint.ConstraintLayout>