<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:id="@+id/first_under_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.yinglan.alphatabs.AlphaTabsIndicator
            android:id="@+id/alphaIndicator"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="#FDFDFD"
            android:orientation="horizontal">

            <com.yinglan.alphatabs.AlphaTabView
                android:id="@+id/home_page_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                app:paddingTexwithIcon="0dp"
                app:tabIconNormal="@mipmap/homepage_selected"
                app:tabIconSelected="@drawable/homepage_unselected"
                app:tabText="@string/homepage"
                app:tabTextSize="11sp"
                app:textColorNormal="#7E807F"
                app:textColorSelected="#343434" />

            <com.yinglan.alphatabs.AlphaTabView
                android:id="@+id/community_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                app:paddingTexwithIcon="0dp"
                app:tabIconNormal="@drawable/community_unselected"
                app:tabIconSelected="@drawable/community_selected"
                app:tabText="@string/community"
                app:tabTextSize="11sp"
                app:textColorNormal="#7E807F"
                app:textColorSelected="#343434" />

            <com.yinglan.alphatabs.AlphaTabView
                android:id="@+id/discovery_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                app:paddingTexwithIcon="0dp"
                app:tabIconNormal="@drawable/discovery_unselected"
                app:tabIconSelected="@drawable/discovery_selected"
                app:tabText="@string/discovery"
                app:tabTextSize="11sp"
                app:textColorNormal="#7E807F"
                app:textColorSelected="#343434" />

            <com.yinglan.alphatabs.AlphaTabView
                android:id="@+id/mine_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                app:paddingTexwithIcon="0dp"
                app:tabIconNormal="@drawable/mine_unselected"
                app:tabIconSelected="@drawable/mine_selected"
                app:tabText="@string/mine"
                app:tabTextSize="11sp"
                app:textColorNormal="#7E807F"
                app:textColorSelected="#343434" />

        </com.yinglan.alphatabs.AlphaTabsIndicator>
    </LinearLayout>

</FrameLayout>