<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/status_bar_view">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.CardView
                    android:id="@+id/banner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="15dp"
                    app:cardCornerRadius="5dp">

                    <com.youth.banner.Banner
                        android:id="@+id/discovery_banner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:banner_default_image="@mipmap/test"
                        app:image_scale_type="fit_xy" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:id="@+id/hot_category_tv_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/banner_layout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <com.example.yxm.photogenic.font.FontTextView
                        android:id="@+id/hot_category_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/hot_category"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:fontType="@string/condensed_bold_font" />

                    <com.example.yxm.photogenic.widget.RightArrowSelectView
                        android:id="@+id/look_all_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        app:rightText="查看全部分类" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hot_category_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hot_category_tv_layout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp" />

                <LinearLayout
                    android:id="@+id/discovery_featured"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hot_category_rv"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <com.example.yxm.photogenic.font.FontTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/discovery_featured"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:fontType="@string/condensed_bold_font" />

                    <com.example.yxm.photogenic.widget.RightArrowSelectView
                        android:id="@+id/look_all_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        app:rightText="查看全部" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/discovery_video_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/discovery_featured"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</RelativeLayout>